--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
-
+spring.jackson.serialization.fail-on-empty-beans=false
 
