--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/wellnesscare
+spring.datasource.url= jdbc:mysql://localhost:3306/wellnessCare
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -8,3 +8,10 @@ spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+spring.mail.host = smtp.gmail.com
+spring.mail.port=587
+spring.mail.username =jhansirajappa@gmail.com
+spring.mail.password = lyxruxjamlnxmcew
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.starttls.required = true
+spring.mail.properties.mail.smtp.auth = true
